@@ -3,7 +3,8 @@ Changelog
 
 0.9-dev - (unreleased)
 ----------------------
- * Todo: tests under marshaller.txt, Exporting a vocabulary and .order()
+ * Todo: fix tests under marshaller.txt which are marked with #TODO
+         fix tests under schema.txt
  * BACKWARD INCOMPATIBLE: Plone4 compatible [ghicaale #4258]
  * Cleaned: pyflakes warnings [ichimdav #4141]
  * Cleaned: pylint violations [ichimdav #4140]
